[gd_scene load_steps=12 format=2]

[ext_resource path="res://Import/IMG_5473.PNG" type="Texture" id=1]
[ext_resource path="res://Import/IMG_5474.PNG" type="Texture" id=2]
[ext_resource path="res://Import/IMG_5478.PNG" type="Texture" id=3]
[ext_resource path="res://Import/IMG_5475.PNG" type="Texture" id=4]
[ext_resource path="res://Import/IMG_5476.PNG" type="Texture" id=5]
[ext_resource path="res://Import/IMG_5477.PNG" type="Texture" id=6]
[ext_resource path="res://Import/IMG_5363.PNG" type="Texture" id=7]
[ext_resource path="res://Import/IMG_5366.PNG" type="Texture" id=8]
[ext_resource path="res://Import/IMG_5355.PNG" type="Texture" id=9]
[ext_resource path="res://Import/IMG_5367.PNG" type="Texture" id=10]
[ext_resource path="res://Script/Main_Hub.gd" type="Script" id=11]

[node name="Main_Hub" type="Node2D"]
script = ExtResource( 11 )

[node name="Screen_Inage" type="Node2D" parent="."]

[node name="MainBG" type="Sprite" parent="Screen_Inage"]
texture = ExtResource( 1 )
centered = false

[node name="Stairs" type="Sprite" parent="Screen_Inage"]
texture = ExtResource( 4 )
centered = false

[node name="Buttons" type="Node2D" parent="."]

[node name="Recruiting_House" type="TextureButton" parent="Buttons"]
margin_left = 191.783
margin_top = 290.672
margin_right = 706.783
margin_bottom = 615.672
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Recruiting_House"]
margin_left = 180.546
margin_top = 143.838
margin_right = 286.546
margin_bottom = 157.838
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.54902, 0.258824, 0.258824, 1 )
text = "Recruiting Office"
align = 1
valign = 1

[node name="Team_Organize" type="TextureButton" parent="Buttons"]
margin_left = 587.336
margin_top = 1385.49
margin_right = 702.336
margin_bottom = 1491.49
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="Buttons"]
margin_left = 615.911
margin_top = 41.2724
margin_right = 687.911
margin_bottom = 109.272
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Adventure" type="TextureButton" parent="Buttons"]
margin_top = 1024.0
margin_right = 234.0
margin_bottom = 1084.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Adventure"]
margin_left = 19.4779
margin_top = 16.4814
margin_right = 85.4779
margin_bottom = 30.4814
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.705882, 0.203922, 0.203922, 1 )
text = "Adventure"
align = 1
valign = 1

[node name="Item_Shop" type="TextureButton" parent="Buttons"]
margin_top = 1160.0
margin_right = 234.0
margin_bottom = 1220.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Item_Shop"]
margin_left = 22.4746
margin_top = 1.49829
margin_right = 88.4746
margin_bottom = 32.4983
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.705882, 0.203922, 0.203922, 1 )
text = "Item Shop"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arena" type="Node2D" parent="."]
[connection signal="pressed" from="Buttons/Recruiting_House" to="." method="_on_Recruiting_House_pressed"]
[connection signal="pressed" from="Buttons/Team_Organize" to="." method="_on_Team_Organize_pressed"]
[connection signal="pressed" from="Buttons/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="Buttons/Adventure" to="." method="_on_Adventure_pressed"]
[connection signal="pressed" from="Buttons/Item_Shop" to="." method="_on_Item_Shop_pressed"]
